# sendexa-python

./: LICENSE  README.md  pyproject.toml
sendexa/: __init__.py  _client.py  errors.py  types.py
sendexa/resources/: __init__.py  email.py  otp.py  sms.py  voice.py  webhooks.py  whatsapp.py
