[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sendexa"
version = "0.1.0"
description = "Official Sendexa Python SDK — SMS, OTP, WhatsApp, Email, Voice, and Webhooks"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sendexa Limited" }]
keywords = ["sendexa", "sms", "otp", "whatsapp", "messaging", "ghana", "api", "sdk"]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://docs.sendexa.co"
Repository = "https://github.com/sendexa/sendexa-python"

[tool.hatch.build.targets.wheel]
packages = ["sendexa"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
target-version = "py39"
line-length = 100
